# golife-ai

./: .gitignore  README.md  README_START_HERE.md  git
.interface-design/: system.md
docs/: 03_DDC_DETAILED_DESIGN_CONTRACTS.md  04_FUNCTIONAL_AND_TECHNICAL_SPEC.md  autocopilot.md  (+4 more)
services/ai_gateway/: .env.example  pyproject.toml
services/ai_gateway/app/: capture_parser.py  crisis_resources.py  errors.py  feedback_store.py  guardrails.py  learning_memory.py  main.py  operational_client.py  operational_payloads.py  policy_engine.py  proof_parser.py  routing_config_client.py  schemas.py  settings.py  use_cases.py
services/ai_gateway/app/graphs/: golife_graph.py  mindflow_graph.py  shopping_graph.py
services/ai_gateway/app/i18n/: __init__.py  locales.py  reflection_messages.py
services/ai_gateway/app/providers/: base.py  factory.py  mock.py  openrouter.py
services/ai_gateway/config/: crisis_resources.catalog.json  reflection_safety_messages.json
services/ai_gateway/tests/: conftest.py  test_api.py  test_commercial_contracts.py  test_daily_mission_graph.py  test_mindflow_api.py  test_mission_ranking_evaluation.py  test_openrouter_normalization.py  test_openrouter_routing.py
services/ai_gateway/tests/fixtures/: mission_ranking_cases.json
services/web_backend/: pyproject.toml
services/web_backend/app/: __init__.py  crypto.py  google_play_billing.py  main.py  openrouter_client.py  repository.py  routing.py  schemas.py  settings.py
services/web_backend/tests/: conftest.py  test_admin_api.py  test_mobile_billing_public_api.py  test_repository.py
(+718 files in other folders)
